# linux-dotfiles

./: LICENSE  README.md  add_routes.sh  buckle.pitched  clear-coredump  codeshell  compilers.sh  cppide  cppshell  cpptest  gtask  gtimew  history-usage  install.sh  kate-lsp-settings.json  net  net.ns.exec  net.routes.skip.add  net.routes.skip.remove  net.tor  net.tor.proxy  net.tor.proxy.termux  pacman-packages-list.txt  save-speech  spacemacs  speech  stream-audio  transfer  welcomeback  zoom-minus  zoom-plus
ananicy.d/00-default/: akonadi.rules  buckle.rules  clion.rules  gnome-shell.rules  mysqld.rules  shell.rules
applications/: codeshell.desktop
cleanup/: apps.sh  browsers.sh  dev.sh  gnome.sh  kde.sh  logs.sh
code-templates/asm/: Makefile  main.asm
code-templates/asm.elf64/: Makefile  main.asm
code-templates/benchmark/: Makefile
code-templates/benchmark.boost.asio/: CMakeLists.txt  main.cpp  pch.h
code-templates/boost/: .vimrc  CMakeLists.txt  main.cpp  pch.h  pch.hpp
code-templates/boost.asio/: CMakeLists.txt  main.cpp  pch.h  pch.hpp
code-templates/boost.beast/: main.cpp  pch.h  pch.hpp
code-templates/c/: Makefile  main.c
code-templates/c.linux/: Makefile  ename.c.inc  error_functions.c  error_functions.h  get_num.c  get_num.h  main.c  tlpi_hdr.h
code-templates/cpp/: .cleaner  .start  CMakeLists.txt  CMakePresets.json  main.cxx
code-templates/cpp.ftxui/: CMakeLists.txt  main.cxx
code-templates/cpp.kokkos/: .clangd  .start  .watch  CMakeLists.txt  main.cpp
code-templates/cpp.modules/: .start  .watch  CMakeLists.txt  foo.cxx  main.cxx
code-templates/cpp.simple/: .clangd  Makefile
code-templates/cpp.simple.webpp/: .clang  .clangd  Makefile  main.cpp
code-templates/cpp.simple.webpp.test/: .clang  .clangd  Makefile  main.cpp
code-templates/gtest/: CMakeLists.txt  main.cpp  pch.h
code-templates/html.live/: .start  .watch  Makefile  index.html  style.css
code-templates/html.live.console/: console.css  console.js  index.html  style.css
code-templates/js.express/: Makefile  index.js  package-lock.json  package.json
code-templates/jup/: .start  .watch  main.ipynb
code-templates/lua/: main.lua
code-templates/opencv/: CMakeLists.txt  main.cpp  pch.h
code-templates/opengl.basic/: CMakeLists.txt  main.cpp  pch.h
code-templates/poco/: CMakeLists.txt  main.cpp
code-templates/protobuf/: CMakeLists.txt  main.cpp  main.proto  pch.h
code-templates/py.conda/: .gitignore  .init  .init.main  .watch  main.py
code-templates/py.jupyter/: .init  .init.side  .start  .watch
code-templates/py.uv/: .gitignore  .init  .start  main.py
code-templates/qt/: CMakeLists.txt  main.cpp
code-templates/simple/: Makefile
code-templates/spdlog/: CMakeLists.txt  main.cpp  pch.h
code-templates/thread/: Makefile  main.cpp
code-templates/wasm/: Makefile  main.cpp
code-templates/wasm.sdl2/: .gitignore  Makefile  index.js  main.cpp  package-lock.json  package.json
code-templates/wasm.sdl2/public/: index.html  post.js
code-templates/wasm/public/: main.js  main.wasm  wasm.js
code-templates/webpp/: CMakeLists.txt  main.cxx  standard.cxx
configs/: chromium-flags.conf
configs/KDE/: kuriikwsfilterrc
configs/SpaceVim.d/: init.toml
configs/alacritty/: alacritty.toml  update-themes.sh
configs/firefox/: policies.json  userChrome.css
configs/gdb/: .gdbinit
configs/kservices5/: openin-youtube.desktop  set-as-done.desktop
configs/nvim/: init.lua
configs/vscode/: extensions.txt  keybindings.json  settings.json
cpp-templates/benchmark/: Makefile  main.cpp
cpp-templates/boost/: CMakeLists.txt  main.cpp
cpp-templates/opencv/: main.cpp
cpp-templates/py/: main.py
cpp-templates/simple/: Makefile  main.cpp
db-ip/country/ad/: ipv4.cidr
db-ip/country/ae/: ipv4.cidr
db-ip/country/af/: ipv4.cidr
db-ip/country/ag/: ipv4.cidr
db-ip/country/ai/: ipv4.cidr
db-ip/country/al/: ipv4.cidr
db-ip/country/am/: ipv4.cidr
encrypted/: nvpn.sh
firewall/: 403  censorship  check-banned  default.nft  health-check  ignore  ignore.iptables  iptun  iptun.client.nft  iptun.server.nft  net.routes.skip  net.routes.skip.add  net.routes.skip.remove  nft.prepare.script  nft.sed.devices  nft.sh  nftop  tor.ips  tproxy  tproxy-to-v2ray.nft  tproxy2socks  tproxy2socks-redsocks.conf  tproxy2socks.nft  vpn.share  wifi.proxy
gdb/: all.gdb  chains.gdb  gef.gdb  gtest.gdb  tui.gdb
git-hooks/webpp/: pre-commit
llvm/: .gitignore  decls.cpp  print-symbols.cpp
nautilus/: ffmpeg-to-mp3
pkgs/: dnf-core.txt  pacman-all.txt  pacman-core.txt
podman/: compose.yaml
prompts/: _common.sh  api.sh  article.sh  bigo.sh  clang-tidy.sh  cli.sh  cmake.sh  comments.sh  commit.sh  compile-time.sh  cpp-reviewer.sh  cpp.sh  cppman.sh  docstring.sh  explain.sh  files.sh  fix.sh  gdb.sh  gtest-case.sh  gtest.sh  man.sh  new.sh  note.sh  perf.sh  refactor.sh  review.sh  run.sh  security.sh  spp.sh  stupid.sh  summarize.sh  symbols.sh  tests.sh  whatwg-url-specs.sh  yt-article.sh  yt.sh
services/: emacs.service  install-services.sh  torloadbalancer.service
services/system/: torloadbalancer.service
setup/: README.md  configure-sudo.sh  disable-auto-updates.sh  disable-screen-lock.sh  install-packages.sh  setup-alacritty-config.sh  setup-chromium-config.sh  setup-desktop-configs.sh  setup-editor-configs.sh  setup-firefox-userchrome.sh  setup-gdb-config.sh  setup-ntp.sh  setup-shell-configs.sh  setup-vscode-config.sh
setup/lib/: common.sh
shell/: aliases  aliases.fish  aliases.nu  cmd_timer.fish  completions.fish  completions.nu  config.fish  config.nu  env.nu  functions  functions.fish  pulse-server.fish  pulse-server.sh  zshrc
tshark/: dns.lua
tv/: abc-news-au.desktop  aljazeera.desktop  arirang.desktop  bbc-persian-youtube.desktop  cgtn-us.desktop  cgtn.desktop  euronews-youtube.desktop  euronews.desktop  generate-telewebion.js  generate.js  irintl.desktop  nbc-news-now.desktop  press-tv.desktop  razavi.desktop  rt-glb.desktop  sky-news-pluto.desktop  sky-news.desktop  snn.desktop
urls/: estekhare
vault/: nvpn.sh  shutdown.sh  start.sh
(+262 files in other folders)
